force-app/main/default/objects/Tarefa__c/Tarefa__c.object-meta.xml
<CustomObject>
    <label>Tarefa</label>
    <nameField>
        <label>Tarefa Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Tarefas</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>