force-app/main/default/objects/Tarefa__c/fields/Arquivada__c.field-meta.xml
<CustomField>
    <fullName>Arquivada__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Arquivada</label>
    <type>Checkbox</type>
</CustomField>