force-app/main/default/objects/Tarefa__c/fields/Checklist__c.field-meta.xml
<CustomField>
    <fullName>Checklist__c</fullName>
    <description>Armazena os itens do checklist da tarefa em formato JSON</description>
    <label>Checklist</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>