force-app/main/default/objects/Tarefa__c/fields/CloseDate__c.field-meta.xml
<CustomField>
    <fullName>CloseDate__c</fullName>
    <label>Close Date</label>
    <type>DateTime</type>
</CustomField>