force-app/main/default/objects/Tarefa__c/fields/ContaReferencia__c.field-meta.xml
<CustomField>
    <fullName>ContaReferencia__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Conta referencia</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Tarefas</relationshipLabel>
    <relationshipName>Tarefas</relationshipName>
    <type>Lookup</type>
</CustomField>