force-app/main/default/objects/Tarefa__c/fields/Descricao__c.field-meta.xml
<CustomField>
    <fullName>Descricao__c</fullName>
    <description>Campo reservado pro usuario popular uma breve descrição da tarefa</description>
    <label>Descrição</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>