force-app/main/default/objects/Tarefa__c/fields/FimTarefa__c.field-meta.xml
<CustomField>
    <fullName>FimTarefa__c</fullName>
    <label>Fim da Tarefa</label>
    <type>DateTime</type>
</CustomField>