force-app/main/default/objects/Tarefa__c/fields/FrequenciaTarefa__c.field-meta.xml
<CustomField>
    <fullName>FrequenciaTarefa__c</fullName>
    <label>Frequência</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Semanal</fullName>
            </value>
            <value>
                <fullName>Quinzenal</fullName>
            </value>
            <value>
                <fullName>Mensal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>