force-app/main/default/objects/Tarefa__c/fields/HasCloseDate__c.field-meta.xml
<CustomField>
    <fullName>HasCloseDate__c</fullName>
    <formula>IF(
    ISBLANK(CloseDate__c),
    1,
    0
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>HasCloseDate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>