force-app/main/default/objects/Tarefa__c/fields/InicioTarefa__c.field-meta.xml
<CustomField>
    <fullName>InicioTarefa__c</fullName>
    <label>Início da Tarefa</label>
    <type>DateTime</type>
</CustomField>