force-app/main/default/objects/Tarefa__c/fields/PrioridadeNumber__c.field-meta.xml
<CustomField>
    <fullName>PrioridadeNumber__c</fullName>
    <formula>CASE(
    TEXT(Prioridade__c),
    &quot;Alta&quot;, 0,
    &quot;Média&quot;, 1,
    &quot;Baixa&quot;, 2,
    2
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PrioridadeNumber</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>