force-app/main/default/objects/Tarefa__c/fields/Recorrente__c.field-meta.xml
<CustomField>
    <fullName>Recorrente__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Recorrente</label>
    <type>Checkbox</type>
</CustomField>