force-app/main/default/objects/Tarefa__c/fields/TipoTarefa__c.field-meta.xml
<CustomField>
    <fullName>TipoTarefa__c</fullName>
    <label>Tipo de tarefa</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Estudos</fullName>
            </value>
            <value>
                <fullName>Outros</fullName>
            </value>
            <value>
                <fullName>Trabalho</fullName>
            </value>
            <value>
                <fullName>Pessoal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>