force-app/main/default/objects/Tarefa__c/recordTypes/Pessoal.recordType-meta.xml
<RecordType>
    <fullName>Pessoal</fullName>
    <active>true</active>
    <label>Pessoal</label>
</RecordType>