force-app/main/default/objects/Tarefa__c/recordTypes/ProjetosPessoais.recordType-meta.xml
<RecordType>
    <fullName>ProjetosPessoais</fullName>
    <active>true</active>
    <label>Projetos Pessoais</label>
</RecordType>