force-app/main/default/objects/Tarefa__c/recordTypes/Trabalho.recordType-meta.xml
<RecordType>
    <fullName>Trabalho</fullName>
    <active>true</active>
    <label>Trabalho</label>
</RecordType>